--- a/index.html
+++ b/index.html
@@ -1,52 +1,133 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <div class="d-flex justify-content-center">
-        <div id="datepicker" data-date=""></div>
+<head>
+  <!-- Meta tags for character encoding, viewport and browser compatibility -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+  <!-- CSS links for Bootstrap, Bootstrap datepicker, Toastr.js, Font Awesome, Google Fonts and custom CSS file -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+
+  <!-- Title for the webpage -->
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <!-- Header section -->
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <!-- Datepicker and Dark Mode button section -->
+    <div class="d-flex justify-content-between align-items-center">
+      <div id="datepicker" data-date=""></div>
+      <div>
+        <button class="btn btn-secondary btn--toggle-dark-mode">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+        </button>
       </div>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
     </div>
+    <!-- Current day section -->
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <!-- Main section -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <!-- Schedule blocks section -->
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">9AM</div>
+            <textarea class="col-md-10 description" data-hour="9"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">10AM</div>
+            <textarea class="col-md-10 description" data-hour="10"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">11AM</div>
+            <textarea class="col-md-10 description" data-hour="11"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">12PM</div>
+            <textarea class="col-md-10 description" data-hour="12"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">1PM</div>
+            <textarea class="col-md-10 description" data-hour="13"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">2PM</div>
+            <textarea class="col-md-10 description" data-hour="14"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">3PM</div>
+            <textarea class="col-md-10 description" data-hour="15"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">4PM</div>
+            <textarea class="col-md-10 description" data-hour="16"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+        <div class="time-block">
+          <div class="row">
+            <div class="col-md-1 hour">5PM</div>
+            <textarea class="col-md-10 description" data-hour="17"></textarea>
+            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-1"></div>
+    </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+  <!-- Import jQuery library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Import moment.js library for date and time handling -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+  <!-- Import Bootstrap Datepicker plugin for date picking -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+  <!-- Import Toastr library for displaying notifications -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+  <!-- Import custom JavaScript file -->
+  <script src="./assets/js/script.js"></script>
+</body>
+
 </html>
